--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <img width="150" src="./logo192.png" alt="Shopway logo" />
       </div>
     </div>
+    <div id="modal_root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
