--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" type="text/css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +29,6 @@
         <img width="150" src="./logo192.png" alt="Shopway logo" />
       </div>
     </div>
-    <div id="modal_root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
