--- a/shopway-frontend/public/index.html
+++ b/shopway-frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/shopwayLogo.png" />
     <link rel="stylesheet" href="/style.css" type="text/css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +26,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="full-page-loader">
-        <img width="150" src="/shopwayLogo.png" alt="Shopway logo" />
+        <img width="150" src="%PUBLIC_URL%/shopwayLogo.png" alt="Shopway logo" />
       </div>
     </div>
     <!--
